Finished implementing Flag capturing. The navigation drawer has been modified to contain the right navigation titles. Implementation of actual navigation still must be done.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCQRWr7kKRwC3Z9gjQQDeeYyLE3oCZMaFs"/>
+        <service android:name=".GeofenceTransitionsIntentService"/>
     </application>
 
 </manifest>
