--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
     compile 'com.firebase:firebase-client-android:2.5.2+'
+    compile 'com.android.support:cardview-v7:23.3.+'
+    compile 'com.android.support:recyclerview-v7:23.3.+'
 }
