--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -34,4 +35,5 @@ dependencies {
     compile 'com.firebase:firebase-client-android:2.5.2+'
     compile 'com.android.support:cardview-v7:23.3.+'
     compile 'com.android.support:recyclerview-v7:23.3.+'
+    compile 'com.android.support:multidex:1.0.1'
 }
